--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -10,7 +10,7 @@
   <!-- title row -->
   <div class="row">
     <div class="offset-md-2 col-lg-9">
-      <div class="page-header">
+      div class="page-header"
         <h1>
           Todo List For Rakesh
         </h1>
