--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -6,17 +6,16 @@
 
 {% block content %}
 <div class="container">
-
   <!-- title row -->
   <div class="row">
     <div class="offset-md-2 col-lg-9">
-      div class="page-header"
+      <div class="page-header">
         <h1>
           Todo List For Rakesh
         </h1>
       </div>
     </div>
-  </div>
+  </div
 
   <!-- Add a todo row -->
   <div class="row">
