--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -11,7 +11,7 @@
     <div class="offset-md-2 col-lg-9">
       <div class="page-header">
         <h1>
-          Todo List For Rakesh
+          Todo List For Rakesh Chaudhary
         </h1>
       </div>
     </div>
