--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -20,7 +20,7 @@
   <!-- Add a todo row -->
   <div class="row">
     <div class="offset-md-2 col-lg-9">
-      //<form method="post" action="{% url 'todos:add' %}">
+      <form method="post" action="{% url 'todos:add' %}">
         {% csrf_token %}
         <div class="form-row">
           <div class="col-md-6">
@@ -49,7 +49,7 @@
               {% endif %} class="todo-status-checkbox"
               title="{% if not todo.isCompleted %} mark as done {% else %} mark undone {% endif %}">
           </form>
-         // {{ todo.title }}
+          {{ todo.title }}
           <a href="{% url 'todos:delete' todo.id %}" title="Delete">
             <i class="far fa-trash-alt"></i>
           </a>
